# zhac-components

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NOTICE  ONBOARDING.md  PRODUCTION_REVIEW.md  README.md  REVIEW_FINDINGS.md  SECURITY.md
components/cron_parser/test/host/: CMakeLists.txt  test_cron.cpp  test_cron_matrix.cpp
components/device_shadow/: CMakeLists.txt  README.md  device_shadow.cpp  shadow_pipeline.cpp
components/device_shadow/include/: device_shadow.h
components/device_shadow/test/: CMakeLists.txt
components/device_shadow/test/host/: CMakeLists.txt  test_device_shadow.cpp
components/device_shadow/test/host/stubs/: esp_err.h  esp_rom_crc.h  nvs.h  nvs_flash.h  nvs_stub.cpp  task_stacks.h
components/device_shadow/test/host/stubs/freertos/: FreeRTOS.h  queue.h  semphr.h  timers.h
components/device_shadow/test/host/stubs/metrics/: metrics_macros.h
components/device_shadow/test/main/: CMakeLists.txt  test_pipeline.cpp
components/esp_zigbee_backend/: CMakeLists.txt  esp_zigbee_backend.cpp
components/esp_zigbee_backend/include/: esp_zigbee_backend.h
components/esp_zigbee_backend/test/host/: CMakeLists.txt  test_esp_zigbee_backend.cpp
components/esp_zigbee_glue/: CMakeLists.txt  Kconfig  esp_zigbee_glue.cpp  idf_component.yml
components/esp_zigbee_glue/include/: esp_zigbee_glue.h
components/event_bus/test/host/: CMakeLists.txt  test_event_bus.cpp
components/hap_json/test/host/: CMakeLists.txt  test_devlist_paging.cpp
components/hap_json/test/host/stubs/: esp_log.h
components/hap_protocol/test/host/: CMakeLists.txt  test_hap_protocol.cpp
components/hap_session/test/host/: CMakeLists.txt  test_hap_session.cpp
components/hap_session/test/host/stubs/: esp_heap_caps.h  esp_timer.h  hap_session_stubs.cpp
components/hap_session/test/host/stubs/metrics/: metrics_macros.h
components/metrics/: CMakeLists.txt  Kconfig  README.md
components/metrics/include/metrics/: metric_registry.def  metrics.h  metrics_export_mqtt.h  metrics_export_prometheus.h  metrics_macros.h  metrics_types.h
components/metrics/src/: metrics.cpp  metrics_atomic.h  metrics_export_mqtt.cpp  metrics_export_prometheus.cpp  metrics_internal.h
components/metrics/test/: CMakeLists.txt
components/metrics/test/main/: CMakeLists.txt  test_metrics.cpp
components/mqtt_gw/: CMakeLists.txt  Kconfig  README.md  mqtt_gw.cpp  mqtt_gw_p4.cpp  mqtt_gw_s3.cpp
components/mqtt_gw/include/: mqtt_gw.h
components/mqtt_gw/test/host/: CMakeLists.txt  test_mqtt_gw_helpers.cpp  test_mqtt_gw_matrix.cpp
components/rule_store/test/host/: CMakeLists.txt  test_rule_store.cpp
components/rule_store/test/host/stubs/: esp_err.h  esp_log.h  esp_rom_crc.h  nvs.h  nvs_checked.h  nvs_stub.cpp  task_stacks.h
components/rule_store/test/host/stubs/freertos/: semphr.h
components/simple_rules/: CMakeLists.txt  README.md  dsl_parser.cpp  expr_eval.cpp  simple_rules.cpp
components/simple_rules/include/: expr_eval.h  simple_rules.h
components/simple_rules/test/: CMakeLists.txt
components/simple_rules/test/host/: CMakeLists.txt  test_action_matrix.cpp  test_action_shadow.cpp  test_bool_match.cpp  test_condition_matrix.cpp  test_dsl_structure.cpp  test_event_loop.cpp  test_expr_eval.cpp  test_integrity.cpp  test_update_persist.cpp
components/simple_rules/test/host/stubs/: esp_heap_caps.h  esp_log.h  host_stubs.cpp  sdkconfig.h
components/simple_rules/test/host/stubs/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h  timers.h
components/simple_rules/test/main/: CMakeLists.txt  test_dsl_parser.cpp  test_matcher_executor.cpp
components/tg_gw/: CMakeLists.txt  tg_gw_p4.cpp  tg_gw_s3.cpp
components/tg_gw/include/: tg_gw.h
components/tg_gw/test/host/: CMakeLists.txt  test_tg_gw_helpers.cpp  test_tg_gw_matrix.cpp
components/zap_common/test/host/: CMakeLists.txt  test_nvs_checked.cpp  test_sys_metrics.cpp  test_zcl_attribute.cpp
components/zap_common/test/host/stubs/: esp_err.h  esp_log.h  sdkconfig.h
components/zap_common/test/host/stubs/freertos/: FreeRTOS.h  task.h
components/zap_store/test/host/: CMakeLists.txt  test_zap_store_logic.cpp  test_zap_store_matrix.cpp
components/zap_store/test/host/stubs/: nvs.h  nvs_stub.cpp  task_stacks.h
components/zap_store/test/host/stubs/freertos/: FreeRTOS.h  task.h
components/zhc_adapter/: CMakeLists.txt
components/zhc_adapter/include/: zhc_adapter.h
components/zhc_adapter/src/: zhc_adapter.cpp  zhc_adapter_fallback.cpp  zhc_adapter_fallback.hpp  zhc_adapter_internal.hpp
components/zigbee_mgr/: CMakeLists.txt  Kconfig  README.md  zcl_commands.cpp  zcl_seq.cpp  zhc_configure_bridge.cpp  zhc_send_bridge.cpp  zhc_shadow_bridge.cpp  zigbee_configure_queue.cpp  zigbee_diagnostics.cpp  zigbee_identity.cpp  zigbee_interview.cpp  zigbee_interview_utils.cpp  zigbee_mgr.cpp  zigbee_pool.cpp
components/zigbee_mgr/include/: zcl_seq.h  zigbee_configure_queue.h  zigbee_diagnostics.h  zigbee_identity.h  zigbee_interview_utils.h  zigbee_mgr.h  zigbee_pool.h
components/zigbee_mgr/test/: CMakeLists.txt
components/zigbee_mgr/test/host/: CMakeLists.txt  test_zigbee_mgr.cpp
components/zigbee_mgr/test/host/stubs/: esp_attr.h  esp_heap_caps.h  esp_log.h  esp_random.h  nvs_u8_stub.cpp  zhc_adapter_stub.cpp  znp_stub.cpp  znp_stub.h
components/zigbee_mgr/test/host/stubs/freertos/: FreeRTOS.h  queue.h  (+3 more)
components/zigbee_mgr/test/main/: CMakeLists.txt  test_zigbee_interview_utils.cpp
components/znp_driver/: CMakeLists.txt  README.md
components/znp_driver/include/: znp_confirm.h  znp_driver.h  znp_transport.h  znp_types.h
components/znp_driver/src/: znp_areq_dispatch.cpp  znp_confirm.cpp  znp_driver_shim.cpp  znp_internal.h  znp_parser.cpp  znp_rx.cpp  znp_state.cpp  znp_transport.cpp  znp_worker.cpp
components/znp_driver/test/: CMakeLists.txt
components/znp_driver/test/host/: CMakeLists.txt  test_znp_driver.cpp
components/znp_driver/test/host/stubs/: esp_err.h  esp_log.h  esp_timer.h  host_stubs.cpp
components/znp_driver/test/main/: CMakeLists.txt  test_znp_confirm.cpp  test_znp_mt.cpp
(+71 files in other folders)
